<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CZ3004</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="title_devices">Bluetooth Devices</string>
    <string name="scan">Scan</string>
    <string name="enable_discovery">Enable Discovery</string>
    <string name="stopScan">Stop Scanning</string>

    <string name="bluetooth_connected">"Connected."</string>
    <string name="bluetooth_disconnected">"Disconnected."</string>
    <string name="bluetooth_failed">"Connect failed."</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="enter_write_text">Enter write text here…</string>

    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connecting">Connecting…</string>

    <string name="robot_stopped">Robot has stopped.</string>
    <string name="robot_moving">Robot is moving.</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="robot_status">Robot Status:\u0020</string>
    <string name="bluetooth_status">Bluetooth Status:\u0020</string>
    <string name="start_exploration">START EXPLORATION</string>
    <string name="start_fastest_path">START FASTEST PATH</string>
    <string name="set_start_point">Set Start Point</string>
    <string name="set_way_point">Set Way Point</string>
    <string name="set_start_direction">Set Start Direction</string>
    <string name="calibrate">Calibrate</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="return_robot">return</string>
    <string name="refresh_map">refresh map</string>
    <string name="mdf_explored">MDF_EXPLORED: </string>
    <string name="mdf_obstacle">MDF_OBSTACLE: </string>
    <string name="show_mdf_string">Show MDF String</string>
    <string name="close">Close</string>
    <string name="reset">RESET</string>

</resources>
