<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" tools:context="com.tutsplus.matt.tutsplus.fragments.DeviceListFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_devices"
        android:textColor="#000"
        android:textSize="60dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/scan"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/scan"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textOff="@string/start_scan"
            android:textOn="@string/stop_scan" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/enable_discovery"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/discovery_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_weight="0.00"
        android:id="@+id/statusLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Status: "
            android:id="@+id/statusLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Disconnected"
            android:id="@+id/statusText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Read: "
            android:id="@+id/readLabel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/readField"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/writeLayout"
        android:weightSum="1">

        <EditText
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:id="@+id/writeField" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Write"
                android:id="@+id/writeButton"
                android:clickable="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save"
                android:id="@+id/saveButton"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>