<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/corners_lightblue"
    >
    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:contentDescription="@string/close" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mdf_exp_head"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/mdf_explored"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="30dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>
        <TextView
            android:id="@+id/mdf_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>
        <TextView
            android:id="@+id/mdf_obs_head"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/mdf_obstacle"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>
        <TextView
            android:id="@+id/mdf_obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>
        <TextView
            android:id="@+id/mdf_logtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MDF LOG"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>
        <TextView
            android:id="@+id/mdf_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"/>

    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>